--- a/src/app/components/LeftNavbar/LeftNavbar.css
+++ b/src/app/components/LeftNavbar/LeftNavbar.css
@@ -1,5 +1,8 @@
-.root {
+.left-navbar-container {
+    list-style: none;
+    padding: 0;
+    margin: 0;
     width: 120px;
-    max-width: 120;
+    max-width: 120px;
     background-color: rgb(21, 28, 32);
 }
